# learning-OpenGL

./: .gitignore  README.md
Common/include/custom/: Camera.hpp
Common/include/glad/: glad.h
Common/src/: Shader.cpp  glad.c
lopengl_BasicLighting/: CMakeLists.txt
lopengl_BasicLighting/assets/shaders/: shader.frag  shader.vert
lopengl_BasicLighting/src/: main.cpp
lopengl_Camera/assets/shaders/: shader.vert
lopengl_Camera/src/: main.cpp
lopengl_CoordinateSystems/: CMakeLists.txt
lopengl_CoordinateSystems/assets/shaders/: shader.frag
lopengl_CoordinateSystems/src/: main.cpp
lopengl_HelloRectangle/: CMakeLists.txt
lopengl_HelloRectangle/src/: main.cpp
lopengl_HelloTriangle/: CMakeLists.txt
lopengl_HelloTriangle/src/: main.cpp  shader.vert
lopengl_HelloTriangle_ex/: CMakeLists.txt
lopengl_HelloTriangle_ex/src/: main.cpp  shader.frag
lopengl_HelloWindow/: CMakeLists.txt
lopengl_HelloWindow/src/: main.cpp
lopengl_Materials/: CMakeLists.txt
lopengl_Materials/assets/shaders/: shader.frag
lopengl_Materials/src/: main.cpp
lopengl_Shaders/: CMakeLists.txt
lopengl_Shaders/assets/shaders/: shader.frag  shader.vert
lopengl_Shaders/src/: main.cpp
lopengl_Textures/: CMakeLists.txt
lopengl_Textures/assets/shaders/: shader.vert
lopengl_Textures/src/: main.cpp
lopengl_Transformations/assets/shaders/: shader.frag  shader.vert
lopengl_Transformations/src/: main.cpp
